; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_nf_dup_netdev.c_nf_fwd_netdev_egress.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_nf_dup_netdev.c_nf_fwd_netdev_egress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nft_pktinfo = type { i32 }
%struct.net_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nf_fwd_netdev_egress(%struct.nft_pktinfo* %0, i32 %1) #0 {
  %3 = alloca %struct.nft_pktinfo*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.net_device*, align 8
  store %struct.nft_pktinfo* %0, %struct.nft_pktinfo** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.nft_pktinfo*, %struct.nft_pktinfo** %3, align 8
  %7 = call i32 @nft_net(%struct.nft_pktinfo* %6)
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.net_device* @dev_get_by_index_rcu(i32 %7, i32 %8)
  store %struct.net_device* %9, %struct.net_device** %5, align 8
  %10 = load %struct.net_device*, %struct.net_device** %5, align 8
  %11 = icmp ne %struct.net_device* %10, null
  br i1 %11, label %17, label %12

12:                                               ; preds = %2
  %13 = load %struct.nft_pktinfo*, %struct.nft_pktinfo** %3, align 8
  %14 = getelementptr inbounds %struct.nft_pktinfo, %struct.nft_pktinfo* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @kfree_skb(i32 %15)
  br label %23

17:                                               ; preds = %2
  %18 = load %struct.nft_pktinfo*, %struct.nft_pktinfo** %3, align 8
  %19 = getelementptr inbounds %struct.nft_pktinfo, %struct.nft_pktinfo* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.net_device*, %struct.net_device** %5, align 8
  %22 = call i32 @nf_do_netdev_egress(i32 %20, %struct.net_device* %21)
  br label %23

23:                                               ; preds = %17, %12
  ret void
}

declare dso_local %struct.net_device* @dev_get_by_index_rcu(i32, i32) #1

declare dso_local i32 @nft_net(%struct.nft_pktinfo*) #1

declare dso_local i32 @kfree_skb(i32) #1

declare dso_local i32 @nf_do_netdev_egress(i32, %struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
